--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Shyam Child Water</title>
-  <meta name="google-site-verification" content="5EIklajhF1dmlXAoY9d-mPS47iEPwm4iwkhDcErwE9A" />
+  <title>Shyam Child Water | Water Can Delivery in Pathalgaon</title>
+  <meta name="description" content="Clean and affordable water supply in Pathalgaon, Chhattisgarh. Shyam Child Water delivers 20L cans and jars at just ₹30. Reliable, fast, and hygienic.">
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -71,7 +71,7 @@
 <body>
   <header>
     <h1>Shyam Child Water</h1>
-    <p>Clean & Reliable Water Supply in Pathalgaon, Chhattisgarh</p>
+    <p>Clean & Reliable Water Can Delivery in Pathalgaon, Chhattisgarh</p>
   </header>
   <nav>
     <a href="#home">Home</a>
@@ -84,14 +84,14 @@
   <section id="home">
     <div class="card">
       <h2>Welcome to Shyam Child Water</h2>
-      <p>We deliver clean, safe drinking water cans and jars directly to your doorstep in Pathalgaon. Trusted by families and businesses alike!</p>
+      <p>We supply safe and hygienic drinking water cans and jars in Pathalgaon. Our goal is to provide affordable and timely water delivery to homes, offices, and shops.</p>
     </div>
   </section>
 
   <section id="about">
     <div class="card">
       <h2>About Us</h2>
-      <p>At Shyam Child Water, we are committed to ensuring access to fresh, hygienic drinking water for homes, offices, and commercial spaces. Our team works tirelessly to provide timely delivery and the best service in town.</p>
+      <p>Based in Pathalgaon, Chhattisgarh, Shyam Child Water is a trusted water supplier serving the local community. We offer clean 20-liter water cans and jars delivered straight to your doorstep, ensuring freshness and quality in every drop.</p>
     </div>
   </section>
 
@@ -99,10 +99,10 @@
     <div class="card">
       <h2>Our Services</h2>
       <ul>
-        <li>Water Can (20L) Delivery</li>
+        <li>20L Water Can Delivery</li>
         <li>Water Jars for Homes and Offices</li>
-        <li>Regular Weekly or On-Demand Supply</li>
-        <li>Fast and Friendly Service</li>
+        <li>Regular and On-Demand Supply</li>
+        <li>Fast, Friendly, and Reliable Service</li>
       </ul>
     </div>
   </section>
@@ -111,14 +111,14 @@
     <div class="card">
       <h2>Pricing</h2>
       <p><strong>Only ₹30 per Water Can or Jar</strong></p>
-      <p>Simple and transparent pricing for all customers. No hidden fees. Delivery available within Pathalgaon area.</p>
+      <p>Simple, affordable pricing for all customers. We deliver anywhere in Pathalgaon with no hidden charges.</p>
     </div>
   </section>
 
   <section id="contact">
     <div class="card">
       <h2>Contact Us</h2>
-      <p>Have questions or want to place an order? Reach us by email below:</p>
+      <p>To place an order or ask a question, contact us via email:</p>
       <form action="mailto:aadityasharma0076@gmail.com" method="POST" enctype="text/plain">
         <input type="text" name="name" placeholder="Your Name" required>
         <input type="email" name="email" placeholder="Your Email" required>
@@ -129,7 +129,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Shyam Child Water. All rights reserved.</p>
+    <p>&copy; 2025 Shyam Child Water | Pathalgaon, Chhattisgarh</p>
   </footer>
 </body>
 </html>
