--- a/index.html
+++ b/index.html
@@ -140,3 +140,11 @@
     <p><strong>Business Owner:</strong> Manoj Kumar Sharma</p>
   </div>
 </section>
+<section id="about">
+  <div class="card">
+    <h2>About Us</h2>
+    <p>At Shyam Child Water, we are committed to ensuring access to fresh, hygienic drinking water for homes, offices, and commercial spaces. Our team works tirelessly to provide timely delivery and the best service in town.</p>
+    <p><strong>Business Owner:</strong> Manoj Kumar Sharma</p>
+    <p><strong>Address:</strong> Jashpur Road, Pathalgaon, Chhattisgarh - 496118</p>
+  </div>
+</section>
