--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,21 +9,20 @@
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      padding: 0;
-      background: url('https://www.transparenttextures.com/patterns/water.png'), #e0f7fa;
+      background: linear-gradient(to bottom, #e0f7fa, #ffffff);
       color: #333;
     }
     header {
-      background-color: #0077cc;
+      background-color: #0288d1;
       color: white;
       padding: 20px;
       text-align: center;
     }
     nav {
-      background-color: #005fa3;
+      background-color: #0277bd;
       display: flex;
       justify-content: center;
-      padding: 10px 0;
+      padding: 10px;
     }
     nav a {
       color: white;
@@ -42,37 +42,28 @@
       border-radius: 10px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
-    img {
-      max-width: 100%;
-      border-radius: 10px;
-      margin-top: 10px;
-    }
     footer {
-      background: #0077cc;
+      background: #0288d1;
       color: white;
       text-align: center;
       padding: 20px;
     }
-    button, input, textarea {
+    input, select, textarea, button {
       width: 100%;
       padding: 10px;
       margin-top: 10px;
       border-radius: 5px;
       border: 1px solid #ccc;
+      box-sizing: border-box;
     }
     button {
-      background-color: #0077cc;
+      background-color: #0288d1;
       color: white;
       border: none;
       cursor: pointer;
     }
     button:hover {
-      background-color: #005fa3;
-    }
-    .order-btn {
-      background-color: #25D366;
-      color: white;
-      font-weight: bold;
+      background-color: #0277bd;
     }
   </style>
 </head>
@@ -80,10 +71,11 @@
   <header>
     <h1>Shyam Child Water</h1>
     <p>Clean & Reliable Water Supply in Pathalgaon, Chhattisgarh</p>
+    <p><strong>Owner:</strong> Manoj Kumar Sharma</p>
   </header>
+
   <nav>
     <a href="#home">Home</a>
-    <a href="#about">About</a>
     <a href="#services">Services</a>
     <a href="#pricing">Pricing</a>
     <a href="#order">Order</a>
@@ -93,26 +85,19 @@
   <section id="home">
     <div class="card">
       <h2>Welcome</h2>
-      <p>We deliver clean, safe drinking water cans and jars directly to your doorstep in Pathalgaon. Trusted by families and businesses alike!</p>
-      <img src="https://5.imimg.com/data5/SELLER/Default/2021/3/LD/PK/QO/71926048/20-ltr-water-jar-500x500.jpg" alt="Water Can">
-    </div>
-  </section>
-
-  <section id="about">
-    <div class="card">
-      <h2>About Us</h2>
-      <p>Owner: <strong>Manoj Kumar Sharma</strong></p>
-      <p>We are committed to delivering fresh, hygienic drinking water with fast and friendly service.</p>
+      <p>We deliver clean, safe drinking water cans and jars directly to your doorstep in Pathalgaon.</p>
+      <p><strong>Address:</strong> Jashpur Road, Pathalgaon</p>
     </div>
   </section>
 
   <section id="services">
     <div class="card">
-      <h2>Services</h2>
+      <h2>Our Services</h2>
       <ul>
         <li>Water Can (20L) Delivery</li>
-        <li>Water Jar Supply for Homes & Offices</li>
-        <li>On-Demand & Weekly Supply Available</li>
+        <li>Water Jars for Homes and Offices</li>
+        <li>Weekly or On-Demand Supply</li>
+        <li>Fast and Friendly Service</li>
       </ul>
     </div>
   </section>
@@ -120,47 +105,76 @@
   <section id="pricing">
     <div class="card">
       <h2>Pricing</h2>
-      <p><strong>Just ₹30 per Can or Jar</strong></p>
-      <p>No hidden charges. Fast delivery across Pathalgaon.</p>
+      <p><strong>Only ₹30 per Water Can or Jar</strong></p>
     </div>
   </section>
 
   <section id="order">
     <div class="card">
-      <h2>Order Now</h2>
-      <p>Choose your item and message us on WhatsApp:</p>
-      <ul>
-        <li>Can Order</li>
-        <a class="order-btn" href="https://wa.me/917610424750?text=I%20want%20to%20order%20a%20Water%20Can" target="_blank">
-          Order Can on WhatsApp
-        </a>
-        <br><br>
-        <li>Jar Order</li>
-        <a class="order-btn" href="https://wa.me/917610424750?text=I%20want%20to%20order%20a%20Water%20Jar" target="_blank">
-          Order Jar on WhatsApp
-        </a>
-        <p>Payment method: Cash on delivery</p>
-      </ul>
+      <h2>Place Your Order</h2>
+      <form id="orderForm">
+        <input type="text" id="name" placeholder="Your Name" required>
+        <input type="text" id="address" placeholder="Delivery Address" required>
+        <select id="product" required>
+          <option value="">Select Product</option>
+          <option value="Water Can (20L)">Water Can (20L)</option>
+          <option value="Water Jar">Water Jar</option>
+        </select>
+        <input type="number" id="quantity" placeholder="Quantity" required min="1">
+        <button type="submit">Order Now</button>
+      </form>
+      <br />
+      <button onclick="downloadPDF()">Download Bill (PDF)</button>
     </div>
   </section>
 
   <section id="contact">
     <div class="card">
       <h2>Contact Us</h2>
-      <p>Email: <a href="mailto:aadityasharma0076@gmail.com">aadityasharma0076@gmail.com</a></p>
-      <p>Phone: <a href="tel:7610424750">7610424750</a></p>
-    </div>
-  </section>
-
-  <section>
-    <div class="card">
-      <h2>Address</h2>
-      <p>Jashpur Road, Pathalgaon, Chhattisgarh</p>
+      <p>Order via WhatsApp or Email:</p>
+      <p><strong>Phone:</strong> <a href="https://wa.me/917610424750" target="_blank">WhatsApp 7610424750</a></p>
+      <p><strong>Email:</strong> <a href="mailto:aadityasharma0076@gmail.com">aadityasharma0076@gmail.com</a></p>
     </div>
   </section>
 
   <footer>
-    &copy; 2025 Shyam Child Water | All rights reserved
+    &copy; 2025 Shyam Child Water. All rights reserved.
   </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script>
+    document.getElementById("orderForm").addEventListener("submit", function (e) {
+      e.preventDefault();
+      const name = document.getElementById("name").value;
+      const address = document.getElementById("address").value;
+      const product = document.getElementById("product").value;
+      const quantity = document.getElementById("quantity").value;
+      const total = 30 * quantity;
+
+      alert("Thank you for your order! You will receive confirmation on WhatsApp.");
+
+      // Send WhatsApp Message
+      const msg = `Order Details:%0AName: ${name}%0AAddress: ${address}%0AProduct: ${product}%0AQuantity: ${quantity}%0ATotal: ₹${total}`;
+      window.open(`https://wa.me/917610424750?text=${msg}`, '_blank');
+    });
+
+    function downloadPDF() {
+      const { jsPDF } = window.jspdf;
+      const doc = new jsPDF();
+      const name = document.getElementById("name").value;
+      const address = document.getElementById("address").value;
+      const product = document.getElementById("product").value;
+      const quantity = document.getElementById("quantity").value;
+      const total = 30 * quantity;
+
+      doc.text("Shyam Child Water - Order Bill", 20, 20);
+      doc.text(`Name: ${name}`, 20, 30);
+      doc.text(`Address: ${address}`, 20, 40);
+      doc.text(`Product: ${product}`, 20, 50);
+      doc.text(`Quantity: ${quantity}`, 20, 60);
+      doc.text(`Total: ₹${total}`, 20, 70);
+      doc.save("Shyam-Water-Bill.pdf");
+    }
+  </script>
 </body>
 </html>
